Config IntelliJ IDEA automatically HOTRELOAD when change code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,13 @@ spring.mail.password=your-app-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Hotreload
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+# spring.devtools.livereload.port=35729
+# spring.devtools.restart.additional-paths=src/main/resources/templates,src/main/resources/static
+# spring.devtools.restart.exclude=static/**,public/**,templates/**
+
 # File Upload Configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
