--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -8,6 +8,12 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Hibernate Configuration
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/schema.sql
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
