--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,37 @@
 # Database Configuration
-spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName==org.postgresql.Driver 
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=false
+# spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://ep-bold-voice-a4yp8xc9-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require
+spring.datasource.username=default
+spring.datasource.password=z9GYTlrXa8Qx
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate không được động chạm vào schema
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none  # vì bạn dùng script schema.sql
+spring.jpa.show-sql=true
+# Tắt hoàn toàn chạy schema.sql và data.sql
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath:schema.sql
 
 # Hibernate Configuration
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/schema.sql
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
+# Không generate schema.sql từ JPA entity
+spring.jpa.generate-ddl=false
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=none
+# spring.jpa.hibernate.ddl-auto=none
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT Configuration
