--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -56,8 +56,10 @@ spring.devtools.livereload.enabled=true
 # File Upload Configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
+# spring.servlet.multipart.max-file-size=5MB
+# spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-request-size=50MB
 file.upload-dir=./uploads
 
 # Logging Configuration
