--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.reflections:reflections:0.10.2'
 	implementation 'org.postgresql:postgresql:42.7.3'
 	implementation 'org.hibernate:hibernate-core:6.4.4.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
