--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/blueimp-md5": "^2.18.2",
     "@apollo/client": "^3.6.8",
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.11.4",
@@ -19,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
     "@reduxjs/toolkit": "^1.6.1",
+    "@types/blueimp-md5": "^2.18.2",
     "@types/yup": "^0.29.13",
     "axios": "^0.21.4",
     "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
@@ -30,7 +30,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.6",
-    "next": "14.2.3",
+    "next": "^14.2.28",
     "react": "^18",
     "react-dom": "^18",
     "react-js-pagination": "^3.0.3",
