Delete uploaded file from disk and remove attachment/blob records by recordType and blobKey

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -11,6 +11,7 @@ spring.datasource.url=jdbc:postgresql://ep-bold-voice-a4yp8xc9-pooler.us-east-1.
 spring.datasource.username=default
 spring.datasource.password=z9GYTlrXa8Qx
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.max-lifetime=300000  # 5 phút, đơn vị: milliseconds
 
 # Hibernate không được động chạm vào schema
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
