--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
 # spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 # spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.driverClassName==org.postgresql.Driver 
+spring.datasource.driverClassName==org.postgresql.Driver
 # spring.datasource.username=sa
 # spring.datasource.password=
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -15,7 +15,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate không được động chạm vào schema
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none  # vì bạn dùng script schema.sql
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 # Tắt hoàn toàn chạy schema.sql và data.sql
 spring.sql.init.mode=never
