--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=${SPRING_APPLICATION_NAME:springboilerplate}
+# spring.aop.proxy-target-class=false
+# spring.jpa.open-in-view=false
 
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://ep-bold-voice-a4yp8xc9-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:default}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:z9GYTlrXa8Qx}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
 
-spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
-spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+# spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+# spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.hibernate.naming.physical-strategy=${SPRING_JPA_HIBERNATE_NAMING_PHYSICAL_STRATEGY:org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
@@ -15,8 +17,8 @@ spring.jpa.generate-ddl=${SPRING_JPA_GENERATE_DDL:false}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.sql.init.mode=${SPRING_SQL_INIT_MODE:never}
 spring.sql.init.schema-locations=${SPRING_SQL_INIT_SCHEMA_LOCATIONS:classpath:schema.sql}
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=${SPRING_JPA_PROPERTIES_JAVAX_PERSISTENCE_SCHEMA_GENERATION_SCRIPTS_ACTION:none}
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=${SPRING_JPA_PROPERTIES_JAVAX_PERSISTENCE_SCHEMA_GENERATION_SCRIPTS_CREATE_TARGET:src/main/resources/schema.sql}
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=${SPRING_JPA_PROPERTIES_JAVAX_PERSISTENCE_SCHEMA_GENERATION_SCRIPTS_ACTION:none}
+spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=${SPRING_JPA_PROPERTIES_JAVAX_PERSISTENCE_SCHEMA_GENERATION_SCRIPTS_CREATE_TARGET:src/main/resources/schema.sql}
 
 spring.h2.console.enabled=${SPRING_H2_CONSOLE_ENABLED:false}
 
